src/test/ui/regions/region-object-lifetime-1.stderr
error: compilation successful
  --> $DIR/region-object-lifetime-1.rs:28:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

